[project]
name = "nft-sales-bot"
version = "0.1.0"
description = "NFT Sales Telegram Bot"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "data", ".git", ".mypy_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() намеренно вызывается до импорта config
"app.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiogram.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "admin.handlers"
disable_error_code = ["union-attr", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
